<resources>
    <string name="app_name">Patmore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="for_you">For you</string>
    <string name="custom">Custom</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="business_and_finance">Business and finance</string>
    <string name="music">Music</string>
    <string name="travel">Travel</string>
    <string name="anime">Anime</string>
    <string name="what_do_you_want_to_see">What do you want to see on \nPatmore?</string>
    <string name="select_at_least_one">Select at least one topic to personalise your Patmore experience. They will be visible on your profile.</string>
    <string name="arts_and_culture">Arts and culture</string>
    <string name="animation_and_comics">Animation and comics</string>
    <string name="careers">Careers</string>
    <string name="entertainment">Entertainment</string>
    <string name="family_and_relationships">Family and relationships</string>
    <string name="fashion_and_beauty">Fashion and beauty</string>
    <string name="fitness">Fitness</string>
    <string name="food">Food</string>
    <string name="gaming">Gaming</string>
    <string name="outdoors">Outdoors</string>
    <string name="science">Science</string>
    <string name="comics">Comics</string>
    <string name="cartoon">Cartoon</string>
    <string name="_3d_animation">3D animation</string>
    <string name="books">Books</string>
    <string name="art">Art</string>
    <string name="writing">Writing</string>
    <string name="dance">Dance</string>
    <string name="horoscope">Horoscope</string>
    <string name="sci_fi_and_fantasy">Sci-fi &amp; fantasy</string>
    <string name="theater">Theater</string>
    <string name="business_profession">Business professions</string>
    <string name="business_personalities">Business personalities</string>
    <string name="stocks_and_indices">Stocks &amp; indices</string>
    <string name="education">Education</string>
    <string name="dating">Dating</string>
    <string name="parenting">Parenting</string>
    <string name="models">Models</string>
    <string name="influencers">Influencers</string>
    <string name="skincare">Skincare</string>
    <string name="cosmetics">Cosmetics</string>
    <string name="body_care">Body care</string>
    <string name="gym">Gym</string>
    <string name="fitness_models">Fitness models</string>
    <string name="fine_dining">Fine dining</string>
    <string name="wine">Wine</string>
    <string name="restaurants">Restaurants</string>
    <string name="hip_hop">Hip-hop</string>
    <string name="pop">Pop</string>
    <string name="rock">Rock</string>
    <string name="r_and_b">R&amp;B</string>
    <string name="live_music">Live music</string>
    <string name="space">Space</string>
    <string name="biology">Biology</string>
    <string name="mathematics">Mathematics</string>
    <string name="physics">Physics</string>
    <string name="chemistry">Chemistry</string>
    <string name="premier_league">Premier League</string>
    <string name="la_liga">La liga</string>
    <string name="nba">NBA</string>
    <string name="serie_a">Serie A</string>
    <string name="ligue_1">Ligue 1</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="boxing">Boxing</string>
    <string name="car_racing">Car racing</string>
    <string name="computer_programming">Computer programming</string>
    <string name="data_science">Data science</string>
    <string name="tech_industry">Tech industry</string>
    <string name="today">Today</string>
    <string name="most_recent">most recent</string>
    <string name="people_i_follow">People I follow</string>
    <string name="all">all</string>
    <string name="choose_a_filter_for_your_timeline">Select an option to filter your timeline</string>
    <string name="hi_user">Hi, {you}</string>
    <string name="please_login">You\'ll have to login to your twitter account to allow us fetch your timeline</string>
</resources>