<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        tools:context=".features.custom.presentation.view.CustomFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAppBarBackground"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:expandedTitleMarginBottom="28dp"
                app:expandedTitleMarginStart="72dp"
                app:layout_scrollFlags="scroll|enterAlways|snap">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/eight"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sixteen"
                        android:text="@string/hi_user"
                        android:textAppearance="@style/textBold"
                        android:textColor="@color/twitterBlue" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sixteen"
                        android:layout_marginTop="@dimen/sixteen"
                        android:layout_marginEnd="@dimen/sixteen"
                        android:text="@string/choose_a_filter_for_your_timeline"
                        android:textAppearance="@style/textHelper"
                        app:layout_constraintTop_toBottomOf="@id/headline" />

                    <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sixteen"
                        android:scrollbars="none">

                        <com.google.android.material.chip.ChipGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:singleLine="true"
                            app:singleSelection="true">

                            <com.google.android.material.chip.Chip
                                android:id="@+id/today_chip"
                                style="@style/Widget.MaterialComponents.Chip.Choice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/sixteen"
                                android:text="@string/today"
                                android:textAppearance="@style/textHelper" />

                            <com.google.android.material.chip.Chip
                                style="@style/Widget.MaterialComponents.Chip.Choice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/most_recent"
                                android:textAppearance="@style/textHelper" />

                            <com.google.android.material.chip.Chip
                                style="@style/Widget.MaterialComponents.Chip.Choice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/people_i_follow"
                                android:textAppearance="@style/textHelper" />

                            <com.google.android.material.chip.Chip
                                style="@style/Widget.MaterialComponents.Chip.Choice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/all"
                                android:textAppearance="@style/textHelper" />

                        </com.google.android.material.chip.ChipGroup>
                    </HorizontalScrollView>
                </LinearLayout>


            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <!-- Note: A RecyclerView can also be used -->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/helper_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.5"
                        android:src="@drawable/ic_waiting_for_you" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sixteen"
                        android:layout_marginTop="@dimen/sixteen"
                        android:layout_marginEnd="@dimen/sixteen"
                        android:text="@string/please_login"
                        android:textAppearance="@style/textHelper"
                        app:layout_constraintTop_toBottomOf="@id/headline" />

                    <com.android.patmore.core.utility.ProgressButton
                        android:id="@+id/login_button"
                        style="@style/Widget.ProgressButton.Purple"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="@dimen/sixteen"
                        android:layout_marginTop="@dimen/twenty_four"
                        android:layout_marginEnd="@dimen/sixteen"
                        android:layout_marginBottom="@dimen/twenty_four"
                        app:enabled="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:text="Login" />
                </LinearLayout>

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:shimmer_auto_start="true"
                    app:shimmer_highlight_color="@color/twitterSlate">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <include layout="@layout/for_you_shimmer_item" />

                        <include layout="@layout/for_you_shimmer_item" />

                    </LinearLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tweets_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    tools:listitem="@layout/single_tweet_item" />
            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
